Merged revisions 1035377 via svnmerge from https://svn.apache.org/repos/asf/cxf/trunk
........
  r1035377 | dkulp | 2010-11-15 13:05:47 -0500 (Mon, 15 Nov 2010) | 2 lines
  
  Add endorsing of the jaxws 2.2/jaxb 2.2 stuff to the scripts and ant
  build thing.
........


git-svn-id: https://svn.apache.org/repos/asf/cxf/branches/2.3.x-fixes@1035379 13f79535-47bb-0310-9956-ffa450edef68